Fix vertical spacing, add spacing between horizontal elements
I matched the type sizes to the xs example, but at larger sizes they don't match up. Not sure if that's to do with typografier changes or what.

--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,11 @@ section {
   color: #fff;
   background-color: #000;
 }
+
+@media only screen and (min-width: 60em) {
+
+  .pad-tween {
+    padding-right: 1em;
+  }
+
+}
